# morning.lang

./: .clang-format  .clang-tidy  .clangd  .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile  HACKING.md  README.md  SHORT_GUIDELINES.md  analyzecode.py  build.sh  compile-run.py  compile-run.sh  example.morning  format-code.py  gengrammar.sh  getversion.py  invalid.morning  morningllvm.cpp  out  run-examples.sh  shell.nix
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
docs/en/: introduction.md
docs/ru/: article.md  introduction.md
examples/: advanced_mini.morning  arrays.morning  conditions.morning  example.morning  factorial.morning  forloops.morning  functions.morning  ifelifelse.morning  input.morning  loops.morning  number_systems.morning  whileloop.morning
source/: _default.hpp  compiler.cpp  compiler.hpp  env.h  input_parser.cpp  input_parser.hpp  linter.cpp  linter.hpp  logger.cpp  logger.h  logger.hpp  main.cpp  morningllvm.cpp  morningllvm.hpp  slogger.hpp  tracelogger.cpp  tracelogger.hpp
source/codegen/: arithmetic.cpp  arithmetic.hpp
source/mlsl/: README.md
source/parser/: MorningLangGrammar.bnf  MorningLangGrammar.h  _grammar.h
source/utils/: cast.hpp  convert.hpp
test/: CMakeLists.txt
test/source/: morninglang_test.cpp
